fixed row overflow issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -203,6 +203,11 @@ select {
     border-radius: 4px;
 }
 
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
 /*nav */
 .navbar {
     background-color: #092c74;
